# VulkanApp

./:  Input.hpp  .clang-format  .gitignore  Allocator.cpp  Allocator.hpp  Bindings.json  Bitmap.hpp  CMakeLists.txt  CMakeSettings.json  Camera.hpp  CircularQueue.hpp  ECSComponents.hpp  GameLevel.cpp  Hello Triangle.sln  Hello Triangle.vcxproj  Hello Triangle.vcxproj.filters  Input.cog.hpp  Input.hpp  IntrusiveList.hpp  MPL.hpp  Models.hpp  Physics.hpp  Pool.hpp  QuadTree.hpp  Sprite.hpp  SpriteData.hpp  TextureResources.hpp  TimeHelper.hpp  UniqueHandle.hpp  UniqueResource.hpp  VulkanApp.h  VulkanApp2.cpp  VulkanApp2.hpp  VulkanBase.h  VulkanFunctions.hpp  VulkanInitInfo.json  VulkanState.hpp  Window.cpp  Window.hpp  alignedAlloc.h  (+23 more)
Content/Blender/: cube.blend  cube.blend1  cube.gltf  cylinder.blend  cylinder.blend1  cylinder.gltf  icosphereSub2.blend1  icosphereSub2.gltf  pentagon.blend  pentagon.blend1  pentagon.gltf  triangle.blend  triangle.gltf
Content/SpriteSheets/: SpriteData.hpp  spritesheet.json  spritesheet.tps
Hello Triangle/: Bitmap.hpp  BlockAllocator.cpp  BlockAllocator.h  ECS.hpp  Hello Triangle.targets  Hello Triangle.vcxproj  Hello Triangle.vcxproj.filters  ImageManager.hpp  Input.h  MPL.hpp  MapHelper.hpp  MemoryAllocator.h  PipelineLayout.h  Texture2D.hpp  VulkanApp.h  VulkanApp2.cpp  VulkanApp2.hpp  VulkanApp2.hxx  VulkanBase.cpp  VulkanBase.h  VulkanBuffer.h  VulkanData.h  VulkanHelper.h  alignedAlloc.h  circularBuffer.hpp  compile.bat  components.hpp  debugcompile.bat  fileIO.h  gcc64debugbuild.bat  main.cpp  main2.cpp  math.h  profiler.hpp  text.hpp  vertexinput.csv  vulkanTestAlloc.hpp  vulkanTextPlan.txt
Hello Triangle/Content/Textures/: Thumbs.db
Hello Triangle/Shaders/: compileShaders.bat  frag.spv  shader.frag  shader.vert  vert.spv
Shaders/: compileShaders.bat  compileShadersSilent.bat  frag.spv  fragmentShader2D.glsl  fragmentShader3D.glsl  shader.frag  shader.vert  vert.spv  vertexShader2D.glsl  vertexShader3D.glsl
config/: VulkanInitInfo.json  dependencyGraph.json  fragmentDescriptorSetLayout2D.json  fragmentShader2D.json  fragmentShader3D.json  frameGraphTest.json  instanceCreateInfo.json  pipeline2D.json  pipeline3D.json  pipelineLayout2D.json  pipelineLayout3D.json  renderPass.json  renderPassCreateInfo.json  sampler2D.json  swapchain.json  swapchainConfig.json  vertexDescriptorSetLayout3D.json  vertexShader2D.json  vertexShader3D.json
config/2D/: dynamicDescriptorSetLayoutCreateInfo.json  fragmentShader.json  pipeline.json  pipelineCreateInfo.json  pipelineLayout.json  sampler.json  staticDescriptorSetLayout.json  vertexShader.json
config/3D/: fragmentShader.json  pipeline.json  pipelineLayout.json  staticDescriptorSetLayout.json  vertexShader.json
content/models/: cube.gltf  cylinder.gltf  icosphereSub2.blend  icosphereSub2.blend1  icosphereSub2.gltf  triangle.gltf
cppcheck-cppcheck-build-dir/: VulkanApp2.a1  VulkanApp2.a2  VulkanApp2.a3  VulkanApp2.a4  files.txt  lastResults.xml  main2.a1  main2.a2  main2.a3  main2.a4  statistics.txt
install/cmake_debug64/lib/cmake/glfw3/: glfw3Targets-debug.cmake
install/cmake_debug64/lib/pkgconfig/: glfw3.pc
shaders/2D/: shader.frag  shader.vert
shaders/3D/: shader.frag  shader.vert
subprojects/btree/: meson.build
subprojects/btree/include/stx/: btree.h
subprojects/bullet/: CMakeLists.txt  bullet-config.cmake
subprojects/bullet/cmake/: CompileOptions.cmake
subprojects/bullet/src/BulletCollision/: CMakeLists.txt
subprojects/bullet/src/BulletDynamics/: CMakeLists.txt
subprojects/bullet/src/BulletSoftBody/: btSoftBody.cpp  btSoftBody.h
subprojects/bullet/src/LinearMath/: CMakeLists.txt
subprojects/bullet/src/clew/: clew.h
subprojects/entt/: meson.build
subprojects/entt/entity/: view.hpp
subprojects/freetype/: meson.build
subprojects/freetype/include/freetype/config/: ftmodule.h  ftoption.h
subprojects/freetype/src/: build.bat  buildfile  ftbase.exp  ftbase.lib  manifest  meson.build
subprojects/freetype/src/vc-15-release/hello/.bpkg/: bpkg.sqlite3
subprojects/glfw/: CMakeLists.txt  meson.build
subprojects/glfw/include/GLFW/: glfw3.h
subprojects/glfw/src/: GLFW.ixx  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  glfw_config.h  init.c  meson.build
subprojects/glm/: meson.build
subprojects/googletest/: meson.build
subprojects/gsl-lite/: meson.build
subprojects/json/: meson.build
subprojects/stb/: meson.build  stb_image.h
subprojects/vulkan/: meson.build
subprojects/vulkan/include/vulkan/: vulkan.h  vulkan.hpp
test/: CircularQueueTest.cpp  IntrusiveListTest.cpp  QuadTreeTest.cpp
vka/: Allocator.cpp  Allocator.hpp  ApplicationState.hpp  Bitmap.hpp  Buffer.hpp  Camera.hpp  CopyState.hpp  Debug.hpp  DescriptorSet.hpp  Device.hpp  DeviceState.hpp  GLTF.hpp  Image2D.hpp  InitState.hpp  Input.hpp  Instance.hpp  InstanceState.hpp  Pipeline.hpp  PipelineState.hpp  Quad.hpp  RenderPass.hpp  RenderState.hpp  Results.hpp  Shader.hpp  ShaderState.hpp  Sprite.hpp  Surface.hpp  SurfaceState.hpp  Swapchain.hpp  UniqueVulkan.hpp  Vertex.hpp  VertexData.hpp  VulkanApp.cpp  VulkanApp.hpp  VulkanApp2.hpp  VulkanFunctionLoader.hpp  VulkanFunctions.cpp  VulkanFunctions.hpp  VulkanFunctions.inl  VulkanInitializers.hpp  (+3 more)
vka/Device/: DescriptorSet.hpp  Device.hpp  Pipeline.hpp  RenderPass.hpp  Surface.hpp  Swapchain.hpp  VertexData.hpp
