lib = library('freetype', 
    'ftsystem.c',
    'ftinit.c',
    'ftdebug.c',
    'ftbase.c',
    'ftbbox.c',
    'ftglyph.c',
    'ftbitmap.c',
    'truetype.c',
    'raster.c',
    'psnames.c',
    version : '2.8.1',
    include_directories : incdir,
    c_args : '/DFT2_BUILD_LIBRARY',
    install : true)